go teaam gender power

--- a/htdocs/speaking.html
+++ b/htdocs/speaking.html
@@ -93,8 +93,8 @@
 
 <article class="fullheight">
 	<h3>I help leaders, entrepreneurs and packed auditorium audiences to take action when stuff gets weird.</h3>
-	<p><strong>Pro tip:</strong> If you didn't notice, stuff has gotten weird lately.</p>
 	<nav>
+	  <p><a data-nav class="btn" href="#gender">On gender <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="#keynotes">Keynotes <i class="ss-right"></i></a></p>
 	  <p><a data-nav class="btn" href="#masterclasses">Masterclasses <i class="ss-right"></i></a></p>	  
 	  <p><a data-nav class="btn" href="#speaker-bio">Bio + media <i class="ss-right"></i></a></p>
@@ -118,10 +118,23 @@
 </article>
 -->
 
+<article id="gender" class="fullheight">
+<!--	<a data-nav class="btn btn-home" href="/"><i class="ss-home"></i></a> -->	
+	<a data-nav class="btn btn-back" href="#"><i class="ss-left"></i> Back</a>
+	<a data-nav class="btn btn-next" href="#keynotes"><i class="ss-right"></i> Keynotes</a>
+
+	<h2>Gender.</h2>
+	<p>I will not speak at any event with only male speakers, nor will I be part of a panel with only male presenters. This is non-negotiable. </p> 
+	<p>If you&rsquo;re putting together an event and want some interesting speakers, hit me up and I can absolutely help you source some great talent, most of whom are much more qualified and impressive than myself.</p>
+	<p>See <a href="http://speakerdiversity.com" target="_blank">speakerdiversity.com</a> for more on this.</p>
+
+	
+</article>
+
 
 <article id="keynotes" class="full fullheight alt">
 	<section>
-		<a data-nav class="btn btn-back" href="#speaking"><i class="ss-left"></i> Speaking</a>
+		<a data-nav class="btn btn-back" href="#gender"><i class="ss-left"></i> Gender</a>
 		<a data-nav class="btn btn-home" href="#"><i class="ss-up"></i> </a>
 		<a data-nav class="btn btn-next" href="#masterclasses"><i class="ss-right"></i> Masterclasses</a>
 		
