god i hate writing bios, yuck yuck yuck

--- a/htdocs/speaking.html
+++ b/htdocs/speaking.html
@@ -415,19 +415,14 @@
 
 	<h2>Biography.</h2>
 	<h3>Briefly:</h3>
-	<p>Will made his first dollar selling stolen lemons in primary school. His father taught him to code soon after. He&rsquo;s consistently failed to get a real job,  instead founding startups in digital, education and social enterprise.</p>
+	<p>Will is a teacher. He&rsquo;s consistently failed to get a real job, instead working in tech companies for most of his career.</p>
 	<p>He consults with big companies and starts small ones.</p>
 	<p>In his spare time he doesn't have any.</p>
 
 	<h3>Less brief:</h3>
-	<p>Will made his first dollar selling stolen lemons in primary school. The margins were incredible. His father taught him to code soon after. His code is still terrible.</p>
-	<p>His first successful exit was at 19 years old, from a small London-based IT training organisation. The resulting funds were used to start a mental health charity for young people in the Melbourne punk scene, a design company and a record label.</p>
-	<p>All of these ventures eventually failed.</p>
-	<p>Later, Will founded one of Melbourne's <a href="http://squareweave.com.au/" target="_blank">leading digital agencies</a>, a <a href="http://gracefitzroy.com/">cafe</a>, and an <a href="https://fitzroyacademy.com/" target="_blank">online school</a>.</p>
-	<p>Despite a complete lack of qualifications, he's an award winning lecturer, building courses on digital and entrepreneurship at two leading Australian universities.</p>
-	<p>As investor, advisor and occasional chair, Will sits on the board of a <a href="http://willdayble.com/work">handful</a> of Australian businesses and non-profits.</p>
-	<p>Will ocassionally flies across the world to make flappy noises with his lips to motivate large groups of people to do things, which is a tremendously strange thing to do for a living if you think about it.</p>
-	<p>He lives in Melbourne, with a neuroscientist and two cats.</p>
+	<p>Will is a teacher. He&rsquo;s consistently failed to get a real job, instead working in tech companies for most of his debatably professional career.</p>
+	<p>He learnt to code in primary school, and has since founded and sold multiple companies, is an award winning lecturer and speaker, and sits on the board of a <a href="http://willdayble.com/work">handful</a> of businesses and non-profits.</p>
+	<p>He lives in Melbourne, with a neuroscientist and two cats, and plans to retire on Mars.</p>
 	<p>In his spare time, Will doesn't have any.</p>
 
 	<hr id="pics">
