tired of this personal website stuff

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -4,32 +4,15 @@
 	<meta charset="utf-8">
 
 	<!-- general metadata -->
-	<title>Will Dayble</title>
-	<meta name="keywords" content="Squareweave, Digital Technology, Web Development, Social Good, Social Impact, Social Enterprise, Startup, Digital Solutions, Innovation, Digital Partnership, Mobile App Development, OurSay, Fitzroy GSD">
-	<meta name="description" content="Molotovs flung and keynotes spoken">
-	<link rel="shortcut icon" href="http://willdayble.com/design/images/dude.png">
-	<link rel="image_src" href="http://willdayble.com/design/images/dude.png">
+	<title>🖖</title>
+	<meta name="keywords" content="Some guy">
+	<meta name="description" content="Go team">
+
 	<link rel="canonical" href="http://willdayble.com"/>
 
-	<!-- Open Graph metadata -->
-	<meta property="og:image" content="http://willdayble.com/design/images/dude.png"/>
-	<meta property="og:url" content="http://willdayble.com"/>
-	<meta property="og:title" content="Will Dayble"/>
-	<meta property="og:description" content="Molotovs flung and keynotes spoken"/>
-
-	<!-- Twitter metadata -->
-	<meta name="twitter:card" content="Molotovs flung and keynotes spoken">
-	<meta name="twitter:site" content="willdayble">
-	<meta name="twitter:title" content="Will Dayble">
-	<meta name="twitter:description" content="Molotovs flung and keynotes spoken">
-	<meta name="twitter:creator" content="Will Dayble">
-	<meta name="twitter:image:src" content="http://willdayble.com/design/images/dude.png">
-	<meta name="twitter:domain" content="http://willdayble.com">
-
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="application-name" content="SquareweaveApp">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-	<meta name="author" content="willdayble.com">
+	<meta name="author" content="🖖">
 
 	<link rel="apple-touch-icon" sizes="57x57" href="design/images/ico/apple-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="design/images/ico/apple-icon-60x60.png">
@@ -63,39 +46,17 @@
 
 <body>
 
-<!--[if lte IE 8]>
-<p class="outdated-browser">Your browser is <em>insecure!</em> Please upgrade your browser for the complete experience of this site.
-	<a href="http://browsehappy.com/">Upgrade.</a>
-</p>
-<![endif]-->
-
 <aside class="optimus"></aside>
 <article id="home">
 	
-	<h2>Will Dayble.</h2>
-	<h3>Hi! I'm a teacher from Melbourne.</h3>
-	<p>I made some <a href="work">businesses</a>, did some internet stuff, now running an online <a href="https://fitzroyacademy.com/" target="_blank">entrepreneurship + impact school.</a></p>
-<!-- 	<p>I'm also an amateur <a href="wood">woodworker</a> and enthusiasm enthusiast. In my spare time I don&rsquo;t have any.</p> -->
+	<h2>🖖</h2>
+	<p>Beep boop.</p>
 
-	<nav>
-	  <p><a data-nav class="btn" href="work">Work <i class="ss-right"></i></a></p>
-<!-- 	Screw this shit.  <p><a data-nav class="btn" href="speaking">Speaking <i class="ss-right"></i></a></p>	   -->
-	  <p><a data-nav class="btn" href="links">Links <i class="ss-right"></i></a></p>
-	  <p><a data-nav class="btn" href="contact">Contact <i class="ss-right"></i></a></p>	   
-	</nav>	
-
-<!--
-	<p>&nbsp;</p>
-	<p>(Also, definitely <a href="nope" class="nope">not a futurist.</a>)
-
-
--->
 
 </article>
 
 <article class="footer">
-	<a data-nav class="btn btn-next" href="contact"><i class="ss-right"></i> Get in touch</a>
-	<img src="design/images/aside/phone.gif" alt="renovation man">
+	<img src="design/images/aside/phone.gif" alt="wat">
 </article>
 
 <!-- <script src="design/vendor/puretabs-master/puretabs.min.js"></script> -->
@@ -113,3 +74,19 @@
 
 </body>
 </html>
+
+<!--
+
+	If you're reading this you've done the view source trick. Woo!
+	Leaving messages in the source codez seems so very old school.
+	This site is just a placeholder now, not into the personal website vibe anymore...
+	I'm honestly not sure about the internet anymore, but I hope you're having a wonderful day. :)
+
+	                                  _                
+   ___ ___  _ __ ___  _ __  _   _| |_ ___ _ __ ___ 
+  / __/ _ \| '_ ` _ \| '_ \| | | | __/ _ \ '__/ __|
+ | (_| (_) | | | | | | |_) | |_| | ||  __/ |  \__ \
+  \___\___/|_| |_| |_| .__/ \__,_|\__\___|_|  |___/
+                     |_|                           
+
+	<3
