put some contact details in idiot

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -27,50 +27,32 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="design/images/ico/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="96x96" href="design/images/ico/favicon-96x96.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="design/images/ico/favicon-16x16.png">
-	<link rel="manifest" href="design/images/ico/manifest.json">
-	<meta name="msapplication-TileColor" content="#ffffff">
-	<meta name="msapplication-TileImage" content="design/images/ico/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 
 			
-	<!-- stoled from SQW -->
+	<!-- lol style -->
 	<link rel="stylesheet" type="text/css" href="design/css/normalize.css" media="all">
-	<link rel="stylesheet" type="text/css" href="design/vendor/ss-social-regular/ss-social-regular.css" media="all">	
-	<link rel="stylesheet" type="text/css" href="design/vendor/ss-glyphish-outlined/ss-glyphish-outlined.css" media="all">
-	<link rel="stylesheet" type="text/css" href="design/css/dude.css?2" media="all">
-			
-	<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->	
-	<!--[if lt IE 8]><script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/chrome-frame/1/CFInstall.min.js"></script><![endif]-->
+	<link rel="stylesheet" type="text/css" href="design/css/dude.css?v2" media="all">
+
+	<script src="https://kit.fontawesome.com/49811790f1.js" crossorigin="anonymous"></script>
 	
 </head>
 
 <body>
 
-<aside class="optimus"></aside>
+<aside class="contact"></aside>
 <article id="home">
 	
 	<h2>🖖</h2>
-	<p>Beep boop.</p>
-
+	<p><i class="fal fa-envelope"></i> &nbsp; <a href="mailto:will@willdayble.com">will@willdayble.com</a></p>
+	<p><i class="fab fa-linkedin"></i> &nbsp; <a href="https://www.linkedin.com/in/willdayble/">willdayble</a></p>
+	<p><i class="fab fa-spotify"></i> &nbsp; <a href="https://open.spotify.com/playlist/6HuQ2kfeAXuD9nds3LdFQU?si=eKiRQ53tTa2U2h14bUdtHg">M O O D</a></p>	
 
 </article>
 
 <article class="footer">
 	<img src="design/images/aside/phone.gif" alt="wat">
 </article>
-
-<!-- <script src="design/vendor/puretabs-master/puretabs.min.js"></script> -->
-<script src="design/vendor/ss-glyphish-outlined/ss-glyphish-outlined.js"></script>
-<script>
-	/* groogles */
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-5821577-9', 'auto');
-  ga('send', 'pageview');
-</script>
 
 </body>
 </html>
@@ -80,9 +62,9 @@
 	If you're reading this you've done the view source trick. Woo!
 	Leaving messages in the source codez seems so very old school.
 	This site is just a placeholder now, not into the personal website vibe anymore...
-	I'm honestly not sure about the internet anymore, but I hope you're having a wonderful day. :)
+	But I hope you're having a wonderful day. :)
 
-	                                  _                
+	                                _                
    ___ ___  _ __ ___  _ __  _   _| |_ ___ _ __ ___ 
   / __/ _ \| '_ ` _ \| '_ \| | | | __/ _ \ '__/ __|
  | (_| (_) | | | | | | |_) | |_| | ||  __/ |  \__ \
@@ -90,3 +72,7 @@
                      |_|                           
 
 	<3
+
+
+
+
